--- a/assets/main.css
+++ b/assets/main.css
@@ -10,17 +10,27 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #ffffff;
+    border-bottom: 1px solid black;
+    align-items: center;
 }
 
 #navbar .item {
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1rem 16px;
     text-decoration: none;
+    font-size: 20px;
+    
 }
 
-#navbar .item:hover {
-    background-color: #111;
+#navbar .item a {
+    text-decoration: none;
+    color: black;
+    transition: 0.3s;
+}
+
+#navbar .item a:hover {
+    color: #a8a8a8;
 }
 
